@@ -1,12 +1,15 @@
 [2.0.6]
+- Changed the computation of expected values to use the method described in Park, Y.,
+  Sheetlin, S., Ma, N. et al. New finite-size correction for local alignment score
+  distributions. *BMC Res Notes* **5**, 286 (2012).
+- Enabled the use of a custom scoring matrix without having to specify the statistical
+  parameters (option `--custom-matrix`).
 - Fixed a bug that could cause incorrect alignment coordinates, gaps counts and sequence
   identities being reported by `diamond view`.
 - Targets are sorted by bit score instead of e-value when the `--top` parameter is used
   in the alignment output.
 - Disabled support of custom scoring matrices for the DAA format.
 - Fixed a bug that caused the use of a custom scoring matrix not to function correctly.
-- Enabled the use of a custom scoring matrix without having to specify the statistical
-  parameters.
 
 [2.0.5]
 - Fixed an issue that could cause high memory use in frameshift alignment mode.
